# helm-public

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.BSL  NOTICE  README.md  SAFETY.md  TRACER-BULLET.md  vcpkg.json
.github/: pull_request_template.md
artifacts/: opencpn_s52_portrayal.schema.sql
backend/: .env.example  .gitignore  README.md  agents.py  context.py  engine_client.py  guardrails.py  llm.py  main.py  probe_contract.py  probe_layers.py  publisher.py  requirements.txt  store.py  test_ai_guardrails.py  test_probe_contract.py  test_s100_spike.py  test_smoke.py
docs/: ARCHITECTURE.md  PWA.md  (+61 more)
native/: CMakeLists.txt  CMakePresets.json  README.md  test-native-core.sh
native/include/helm/native/: nav_state.hpp
native/ios/: README.md  build-ios-proof.sh
native/ios/HelmWebViewProof/: ContentView.swift  HelmBonjourBrowser.swift  HelmEndpoint.swift  HelmWebCapabilityReport.swift  HelmWebView.swift  HelmWebViewProofApp.swift  Info.plist
native/ios/HelmWebViewProof.xcodeproj/: project.pbxproj
native/ios/HelmWebViewProof.xcodeproj/xcshareddata/xcschemes/: HelmWebViewProof.xcscheme
native/macos/: README.md  build-macos-client.sh  package-macos-dmg.sh
native/macos/HelmMac/: ContentView.swift  HelmBonjourBrowser.swift  HelmConnectionController.swift  HelmEndpoint.swift  HelmMacApp.swift  Info.plist  SerialConnectionDraft.swift  SerialDeviceScanner.swift
native/macos/HelmMac.xcodeproj/: project.pbxproj
native/macos/HelmMac.xcodeproj/xcshareddata/xcschemes/: HelmMac.xcscheme
native/src/: nav_state.cpp
native/tests/: nav_state_test.cpp
(+466 files in other folders)
